[package]
name = "dyncomp"
version = "0.1.0"
edition = "2021"
authors = ["Quique Kessler Martínez <qkessler@gmail.com>"]
description = "Provides context and project aware aliases for common used commands."
documentation = "https://github.com/Qkessler/dyncomp"
homepage = "https://github.com/Qkessler/dyncomp"
keywords = ["cli", "alias", "project"]
license = "MIT"
repository = "https://github.com/Qkessler/dyncomp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive", "cargo"] }
dirs = "4.0"
once_cell = "1.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.1.0"
tempfile = "3.3"
